--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="pet-detail">
-            <!-- <h4>Type of pet</h4>
-            <p>Age: Age of pet</p>
-            <p>Friendly: No</p> -->
+            <h4>Type of pet</h4>
+            <p class="age">Age: Age of pet</p>
+            <p class="friendly">Friendly: No</p>
         </div>
 
         <script src="js/petDetail.js"></script>
