--- a/list.html
+++ b/list.html
@@ -7,12 +7,9 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <div class="pet-detail">
-            <h4>Type of pet</h4>
-            <p class="age">Age: Age of pet</p>
-            <p class="friendly">Friendly: No</p>
-        </div>
+        <div class="pet-container"></div>
 
-        <script src="js/petDetail.js"></script>
+        <script src="js/data/pets.js"></script>
+        <script src="js/petList.js"></script>
     </body>
 </html>
